Adding main page content

--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html>
 <head>
   <title>Dream Story</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>Dream Story</h1>
+  <section id="heading">
+    <div class="dd"><img src="images/dd-excited.png" alt="Dee-Dee's excited for her grand detective adventure!"></div>
+    <div class="logo"><img src="images/dream-story-logo.png" alt="Dream Story: The Luceed Legacy"></div>
+  </section>
+  <section id="info">
+    <h1 class="center">An awesome, dreamy, psychic-investigatory story!</h1>
+    <p>Meet Dee-Dee, a young girl with psychokinetic powers learning how to harness her abilities at the Zee Academy of Dreams in order to be a great detective. But when the twisted wizard Fuseli takes the school into the stratosphere, leaving Dee-Dee stranded along the way, she must find her way back into the academy - and solve all kinds of mysteries along the way!</p>
+    <p>Inspired by the line of <em>Mario</em> RPGs and adventure games like <em>Ace Attorney</em>, the game will take Dee-Dee across the world meeting new and bizarre faces, as well as taking on some crazy cases! Explore the world, gather clues, interrogate suspects, befriend allies, and battle Nightmares across six planned chapters!</p>
+    <p>As of right now, there's not much to showcase as the game is still very early in development, but over the next year this page will showcase more stuff like screenshots, character designs, and even more!</p>
+    <h1 class="center">Planned for release 2023!</h1>
+  </section>
+  <footer>
+    <p>Game Design and Story by Cole Marlar</p>
+  </footer>
 </body>
 </html>
