--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p>Inspired by the line of <em>Mario</em> RPGs and adventure games like <em>Ace Attorney</em>, the game will take Dee-Dee across the world meeting new and bizarre faces, as well as taking on some crazy cases! Explore the world, gather clues, interrogate suspects, befriend allies, and battle Nightmares across six planned chapters!</p>
     <p>As of right now, there's not much to showcase as the game is still very early in development, but over the next year this page will showcase more stuff like screenshots, character designs, and even more!</p>
     <h1 class="center">Planned for release 2023!</h1>
+
+    <p class="center social"><a href="https://twitter.com/DreamStoryGame" target="_blank"><span class="twitter"></span>Follow us on Twitter!</a></p>
   </section>
   <footer>
     <p>Game Design and Story by Cole Marlar</p>
