Fixed issue on Safari

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>As of right now, there's not much to showcase as the game is still very early in development, but over the next year this page will showcase more stuff like screenshots, character designs, and even more!</p>
     <h1 class="center">Planned for release 2023!</h1>
 
-    <p class="center social"><a href="https://twitter.com/DreamStoryGame" target="_blank"><span class="twitter"></span>Follow us on Twitter!</a></p>
+    <p class="center social"><a class="twitter" href="https://twitter.com/DreamStoryGame" target="_blank">Follow us on Twitter!</a></p>
   </section>
   <footer>
     <p>Game Design and Story by Cole Marlar</p>
