--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </section>
   <section id="info">
     <h1 class="center">An awesome, dreamy, psychic-investigatory story!</h1>
-    <p>Meet Dee-Dee, a young girl with psychokinetic powers learning how to harness her abilities at the Zee Academy of Dreams in order to be a great detective. But when the twisted wizard Fuseli takes the school into the stratosphere, leaving Dee-Dee stranded along the way, she must find her way back into the academy - and solve all kinds of mysteries along the way!</p>
+    <p>Meet Dee-Dee, a young girl with psychokinetic powers learning how to harness her abilities at the Zee Academy of Dreams in order to be a great detective. But when the twisted wizard Fuseli takes the school into the stratosphere, leaving Dee-Dee stranded in the process, she must find her way back into the academy - and solve all kinds of mysteries along the way!</p>
     <p>Inspired by the line of <em>Mario</em> RPGs and adventure games like <em>Ace Attorney</em>, the game will take Dee-Dee across the world meeting new and bizarre faces, as well as taking on some crazy cases! Explore the world, gather clues, interrogate suspects, befriend allies, and battle Nightmares across six planned chapters!</p>
     <p>As of right now, there's not much to showcase as the game is still very early in development, but over the next year this page will showcase more stuff like screenshots, character designs, and even more!</p>
     <h1 class="center">Planned for release 2023!</h1>
