Updated website for 2021

--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
 </head>
 <body>
   <section id="heading">
-    <div class="dd"><img src="images/dd-excited.png" alt="Dee-Dee's excited for her grand detective adventure!"></div>
-    <div class="logo"><img src="images/dream-story-logo.png" alt="Dream Story: The Luceed Legacy"></div>
+    <div class="dd"><img src="images/deedee-standalone.png" alt="Image of Dee-Dee the main character" /></div>
+    <div class="logo"><img src="images/dslogo.png" alt="Dream Story: The Luceed Legacy" /></div>
   </section>
   <section id="info">
-    <h1 class="center">An awesome, dreamy, psychic-investigatory story!</h1>
-    <p>Meet Dee-Dee, a young girl with psychokinetic powers learning how to harness her abilities at the Zee Academy of Dreams in order to be a great detective. But when the twisted wizard Fuseli takes the school into the stratosphere, leaving Dee-Dee stranded in the process, she must find her way back into the academy - and solve all kinds of mysteries along the way!</p>
-    <p>Inspired by the line of <em>Mario</em> RPGs and adventure games like <em>Ace Attorney</em>, the game will take Dee-Dee across the world meeting new and bizarre faces, as well as taking on some crazy cases! Explore the world, gather clues, interrogate suspects, befriend allies, and battle Nightmares across six planned chapters!</p>
-    <p>As of right now, there's not much to showcase as the game is still very early in development, but over the next year this page will showcase more stuff like screenshots, character designs, and even more!</p>
-    <h1 class="center">Planned for release 2023!</h1>
+    <div class="screenshots">
+      <img src="images/ds_testshot1.jpg" alt="Alpha screenshot of Dee-Dee walking through the woods" />
+      <img src="images/ds_testshot2.jpg" alt="Alpha screenshot of Dee-Dee battling some enemies" />
+    </div>
+    <p class="notice">*Screenshots are of a work-in-progress game. Not representative of the final product.</p>
+    <p><em>Dream Story: The Luceed Legacy</em> is a role-playing adventure game where mysteries beyond your wildest dreams are around every corner! Play as a young detective-to-be with psychic powers and the ability to see through people’s lies to solve five extraordinary cases!</p>
+    <p>Inspired by the line of <em>Ace Attorney</em> games and the <em>Mario</em> RPGs, Dream Story: The Luceed Legacy combines tactical turn-based combat with brainteasing mystery investigation!</p>
 
-    <p class="center social"><a class="twitter" href="https://twitter.com/DreamStoryGame" target="_blank">Follow us on Twitter!</a></p>
+    <h1 class="center">CURRENTLY IN DEVELOPMENT</h1>
+    <p class="center">Aiming for Release in 2023 on PC</p>
+
+    <p class="center social">Twitter: <a href="https://twitter.com/DreamStoryGame" target="_blank">@DreamStoryGame</a></p>
   </section>
   <footer>
-    <p>Game Design and Story by Cole Marlar</p>
+    <p>&copy;2018-<span id="year"></span> Cole Marlar / PROJECT DREAM DETECTIVE</p>
   </footer>
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+  </script>
 </body>
 </html>
