Updated website for game rebrand

--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
 </head>
 <body>
   <section id="heading">
-    <div class="dd"><img src="images/deedee-standalone.png" alt="Image of Dee-Dee the main character" /></div>
-    <div class="logo"><img src="images/dslogo.png" alt="Dream Story: The Luceed Legacy" /></div>
+    <div class="logo"><img src="images/dslogo_202X.png" alt="Dream Story" /></div>
   </section>
   <section id="info">
-    <div class="screenshots">
-      <img src="images/ds_testshot1.jpg" alt="Alpha screenshot of Dee-Dee walking through the woods" />
-      <img src="images/ds_testshot2.jpg" alt="Alpha screenshot of Dee-Dee battling some enemies" />
+    <div class="yt-embed">
+      <iframe src="https://www.youtube.com/embed/4807wBnbHsc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" class="video" allowfullscreen></iframe>
     </div>
-    <p class="notice">*Screenshots are of a work-in-progress game. Not representative of the final product.</p>
-    <p><em>Dream Story: The Luceed Legacy</em> is a role-playing adventure game where mysteries beyond your wildest dreams are around every corner! Play as a young detective-to-be with psychic powers and the ability to see through people’s lies to solve five extraordinary cases!</p>
-    <p>Inspired by the line of <em>Ace Attorney</em> games and the <em>Mario</em> RPGs, Dream Story: The Luceed Legacy combines tactical turn-based combat with brainteasing mystery investigation!</p>
 
-    <h1 class="center">CURRENTLY IN DEVELOPMENT</h1>
-    <p class="center">Aiming for Release in 2023 on PC</p>
+    <h1>202X*</h1>
+    <h2>*Eventually. Hopefully.</h2>
 
-    <p class="center social">Twitter: <a href="https://twitter.com/DreamStoryGame" target="_blank">@DreamStoryGame</a></p>
+    <p class="center social">
+      <a href="https://twitter.com/DreamStoryGame" target="_blank">
+        <img src="images/twitter-icon.png" alt="Twitter Link to @DreamStoryGame" />
+      </a>
+    </p>
   </section>
   <footer>
     <p>&copy;2018-<span id="year"></span> Cole Marlar / PROJECT DREAM DETECTIVE</p>
